# week2_emr_agent

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENT_ARCHITECTURE.md  AI_COST_ANALYSIS.md  AgentForge_Week2.md  BROWSER_WALKTHROUGH.md  CLAUDE.md  EVAL_REPORT.md  INTROSPECTION-codex.md  INTROSPECTION.md  MANUAL_TESTING.md  NOTES.md  RAILWAY_DEPLOYMENT.md  README.md  UNITS.md  USER_STORIES.md  design_research.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  railway.toml  ux-principles-web-apps.md
.claude/: settings.json
.claude/hooks/: worktree_create.sh  worktree_remove.sh
.githooks/: pre-push
docker/: Dockerfile  Dockerfile.openemr  seed_data.sql  start.sh
docs/: DEPLOY.md  OPENEMR_DOM_ANALYSIS.md  openemr_sidebar_integration.md  research_eval_harness.md  research_read_before_write.md  research_s2_orchestration_loop.md
docs/research/: s1-conversation-session.md  s10_adversarial_surface.md  s11_human_in_the_loop.md  s4-openemr-client.md  s5_change_manifest.md  s6_verification_pipeline.md  s8_observability_layer.md
openemr-module/: composer.json  info.txt  moduleConfig.php  openemr.bootstrap.php  version.php
openemr-module/public/: proxy.php  sidebar_frame.php
openemr-module/src/: Bootstrap.php  HmacAuth.php
scripts/: analyze_mutants.py  deploy-railway.sh  deploy.sh  dojo_render.py  dsl_token_experiment.py  feedback_queue.py  hard_reset.sh  preflight-check.sh  railway-seed.sh  register-oauth.sh  reset_patients.py  seed_fhir.py  seed_patients.py  seed_railway.py  server-setup.sh  session_trace.py  verify-deployment.sh
tests/: conftest.py  test_labels.py
(+89 files in other folders)
